workloads/mattermost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app.kubernetes.io/name: mattermost
    app.kubernetes.io/instance: mattermost
spec:
  ports:
    - name: http
      port: 8065
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: mattermost
    app.kubernetes.io/instance: mattermost
  type: ClusterIP
